<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="id.usup.absensidigital.SignUpActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edittext_signup_nip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_nip"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edittext_signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_nama"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edittext_signup_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_alamat"
            android:inputType="textPostalAddress" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Gender"/>

    <RadioGroup
        android:id="@+id/radiogroup_signup_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:checked="true"
            android:id="@+id/radio_button_signup_man"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Male"/>
        <RadioButton
            android:layout_marginTop="8dp"
            android:id="@+id/radio_button_signup_woman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Female"/>
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edittext_signup_nohp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_nohp"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edittext_signup_imei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_imei"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_signup_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />




</LinearLayout>
